--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   font_awesome_flutter: ^10.6.0
   google_fonts: ^6.1.0
   go_router: ^13.0.0
+  dartz: ^0.10.1
 
 dev_dependencies:
   flutter_test:
