--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+ 
   cupertino_icons: ^1.0.2
   dartz: ^0.10.1
 
@@ -35,6 +36,7 @@ dependencies:
   flutter:
     sdk: flutter
 
+  flutter_bloc: ^8.1.3
   font_awesome_flutter: ^10.6.0
   go_router: ^13.0.0
   google_fonts: ^6.1.0
