--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
 
   flutter_bloc: ^8.1.3
   font_awesome_flutter: ^10.6.0
+  get_it: ^7.6.6
   go_router: ^13.0.0
   google_fonts: ^6.1.0
   hive: ^2.2.3
