--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   google_fonts: ^6.1.0
   hive: ^2.2.3
   hive_flutter: ^1.1.0
+  webview_flutter: ^4.4.4
 
 dev_dependencies:
   build_runner: ^2.4.7
