--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
     sdk: flutter
 
   flutter_bloc: ^9.1.1
+  flutter_dotenv: ^6.0.0
   font_awesome_flutter: ^10.6.0
   get_it: ^9.0.5
   go_router: ^17.0.0
@@ -66,6 +67,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/
+    - .env
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
   # For details regarding adding assets from package dependencies, see
